// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/processor.js composition should allow comments before composes 1`] = `
Object {
  "multiple-composes.css": Object {
    "a": Array [
      "mc_a",
    ],
    "b": Array [
      "mc_a",
      "mc_b",
    ],
  },
}
`;

exports[`/processor.js composition should allow composes anywhere 1`] = `
Object {
  "multiple-composes.css": Object {
    "a": Array [
      "mc_a",
    ],
    "b": Array [
      "mc_a",
      "mc_b",
    ],
    "c": Array [
      "mc_a",
      "mc_b",
      "mc_c",
    ],
  },
}
`;

exports[`/processor.js composition should compose a single class 1`] = `
Object {
  "single-composes.css": Object {
    "a": Array [
      "mc_a",
    ],
    "b": Array [
      "mc_a",
      "mc_b",
    ],
  },
}
`;

exports[`/processor.js composition should compose from global keyword 1`] = `
Object {
  "global-compose.css": Object {
    "a": Array [
      "b",
      "c",
      "d",
      "mc_a",
    ],
  },
}
`;

exports[`/processor.js composition should compose from globals 1`] = `
Object {
  "global-compose.css": Object {
    "a": Array [
      "b",
      "mc_a",
    ],
  },
}
`;

exports[`/processor.js composition should compose from other files in multiple declarations 1`] = `
Object {
  "packages/processor/test/specimens/composes/two-composes-two-external-deps.css": Object {
    "ruleWithComposes": Array [
      "mc_red",
      "mc_blue",
      "mc_ruleWithComposes",
    ],
  },
  "packages/processor/test/specimens/deps/classes.css": Object {
    "block": Array [
      "mc_block",
    ],
    "blue": Array [
      "mc_blue",
    ],
    "flex": Array [
      "mc_flex",
    ],
    "green": Array [
      "mc_green",
    ],
    "red": Array [
      "mc_red",
    ],
    "yellow": Array [
      "mc_yellow",
    ],
  },
}
`;

exports[`/processor.js composition should compose from other files in multiple declarations via local compose 1`] = `
Object {
  "packages/processor/test/specimens/composes/two-rules-one-local-compose.css": Object {
    "ruleWithLocalComposes": Array [
      "mc_blue",
      "mc_red",
      "mc_ruleWithSingleCompose",
      "mc_ruleWithLocalComposes",
    ],
    "ruleWithSingleCompose": Array [
      "mc_red",
      "mc_ruleWithSingleCompose",
    ],
  },
  "packages/processor/test/specimens/deps/classes.css": Object {
    "block": Array [
      "mc_block",
    ],
    "blue": Array [
      "mc_blue",
    ],
    "flex": Array [
      "mc_flex",
    ],
    "green": Array [
      "mc_green",
    ],
    "red": Array [
      "mc_red",
    ],
    "yellow": Array [
      "mc_yellow",
    ],
  },
}
`;

exports[`/processor.js composition should compose from other files in single declaration 1`] = `
Object {
  "packages/processor/test/specimens/composes/one-compose-two-external-deps.css": Object {
    "ruleWithComposes": Array [
      "mc_red",
      "mc_blue",
      "mc_ruleWithComposes",
    ],
  },
  "packages/processor/test/specimens/deps/classes.css": Object {
    "block": Array [
      "mc_block",
    ],
    "blue": Array [
      "mc_blue",
    ],
    "flex": Array [
      "mc_flex",
    ],
    "green": Array [
      "mc_green",
    ],
    "red": Array [
      "mc_red",
    ],
    "yellow": Array [
      "mc_yellow",
    ],
  },
}
`;

exports[`/processor.js composition should compose multiple classes (multiple declarations) 1`] = `
Object {
  "multiple-composes.css": Object {
    "a": Array [
      "mc_a",
    ],
    "b": Array [
      "mc_b",
    ],
    "c": Array [
      "mc_a",
      "mc_b",
      "mc_c",
    ],
  },
}
`;

exports[`/processor.js composition should compose multiple classes (single declaration) 1`] = `
Object {
  "multiple-composes.css": Object {
    "a": Array [
      "mc_a",
    ],
    "b": Array [
      "mc_b",
    ],
    "c": Array [
      "mc_a",
      "mc_b",
      "mc_c",
    ],
  },
}
`;

exports[`/processor.js composition should compose with escaped classes 1`] = `
Object {
  "escaped-classes.css": Object {
    "c": Array [
      "mc_sm:foo",
      "mc_c",
    ],
    "sm:foo": Array [
      "mc_sm:foo",
    ],
  },
}
`;

exports[`/processor.js composition should remove \`composes\` from the output css (composes first) 1`] = `
"/* remove-composes.css */
.mc_a { color: red; }
.mc_b { background: blue; }"
`;

exports[`/processor.js composition should remove \`composes\` from the output css (composes last) 1`] = `
"/* remove-composes.css */
.mc_a { color: red; }
.mc_b { background: blue; }"
`;

exports[`/processor.js composition should remove \`composes\` from the output css (composes middle) 1`] = `
"/* remove-composes.css */
.mc_a { color: red; }
.mc_b { background: blue; border-color: green; }"
`;

exports[`/processor.js composition should remove \`composes\` from the output css (only composes) 1`] = `
"/* remove-composes.css */
.mc_a { color: red; }"
`;
